trying to fix mobile overlapping content

--- a/main.css
+++ b/main.css
@@ -463,6 +463,7 @@ MEDIA QUERIES
     }
     .mainNav{
         background-color: white;
+        height: 100%;
     }
     .mainNav a{
         font-size: 1.3em;
@@ -473,6 +474,7 @@ MEDIA QUERIES
     }
     .mainHeader{
         height: 100%;
+        margin-bottom: 5px;
         }
     .mainLogoFudge{
         margin-top:0;
@@ -490,6 +492,7 @@ MEDIA QUERIES
         height: 100%;
         display: flex;
         flex-direction: column;
+        margin-top: 10px;
     }
     
     .items{
